# otx-py

./: main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/otx_py/: __init__.py  client.py  models.py
