[project]
name = "otx-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thrzl", email = "thrizzle@proton.me" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
